# gtest

./: CMakeLists.txt  gtestConfig.cmake.in
lib/: gtest_main.lib
